added html and css commit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,156 @@
     <title>B13-A02</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
-   
+<body class="work-sans-font">
+   <header>
+    <nav class="navbar">
+     <div class="nav-logo"> 
+        <img src="assets/TechWave.png" alt="">
+     </div>
+     
+      <ul class="nav-links">
+        <li><a href="#" class="nav-link text-1">About</a></li>
+        <li><a href="#" class="nav-link text-2">Episodes</a></li>
+        <li><a href="#" class="nav-link text-3">Host</a></li>
+      </ul>
+      <div>
+        <button class="primary-btn">
+          <span class="text-4">Subscribe</span>
+          <img class="icons" src="assets/ArrowRight.png">
+        </button>
+      </div>
+    </nav>
+   </header>
+
+   <section class="banner">
+    <div class="circle-wrap">
+      <img src="assets/hero-circle.png" class="middle-img">
+      <img src="assets/microphone.png" class="inner-img">
+       <button class="top-btn">
+        <span class="new">NEW</span>
+       </button>
+    </div>
+  <div class="banner-box">
+  <h1>TechWave</h1>
+  <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+</div>
+
+<div class="banner-buttons">
+    <button class="btn-primary">
+    <img src="assets/spotify.png" alt="">
+    <span class="btn-text1">Listen on Spotify</span>
+    </button>
+    <button class="btn-secondary">
+     <img src="assets/message.png" alt="">
+    <span class="btn-text2">Subscribe</span>
+  </button>
+   </div>
+  
+   </section>
+
+   <section class="about">
+    <div class="about-container">
+      <h1>About the Podcast</h1>
+      <p>TechWave is your go podcast for staying ahead in the fast paced word of technology. <br>
+        <br>
+      We break down complex topics into digestible insights, explore productivity strategies that actually work,<br>
+      <br>
+      and share stories of personal growth from industry leaders. <br>
+      <br>
+      <br>
+    Join thousands of young professional and tech enthusiasts who start their day with TechWave.</p>
+    </div>
+     <div class="about-section">
+     <div class="box-1">
+      <h1>150K+</h1>
+      <p>MONTHLY LISTENERS</p>
+    </div>
+    <div class="box-1">
+      <h1>200+</h1>
+      <p>EPISODES PUBLISHED</p>
+    </div>
+    <div class="box-1">
+      <h1>4.9</h1>
+      <p>AVERAGE RATING</p>
+    </div>
+    <div class="box-1">
+      <h1>50+</h1>
+      <p>INDUSTRY EXPERTS</p>
+    </div>
+   </div>
+   </section>
+   <section class="Choose">
+    <div class="choose-container">
+   <div>
+    <h1>Why Choose TechWave</h1>
+   </div>
+   <div class="box-2">
+    <img class="icon" src="../assets/headphone.png" alt="">
+    <h1>Premium Audio Quality</h1>
+    <p>Experience crystal-clear sound with professional recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+   </div>
+   <div class="box-2">
+    <img class="icon" src="../assets/device.png" alt="">
+    <h1>Mobile Friendly</h1>
+    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+   </div>
+   <div class="box-2">
+    <img class="icon" src="../assets/location.png" alt="">
+    <h1>Global Community</h1>
+    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+   </div>
+   <div class="box-2">
+    <img class="icon" src="../assets/zap-fast.png" alt="">
+    <h1>Exclusive Interviews</h1>
+    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+   </div>
+   <div class="box-2">
+    <img class="icon" src="assets/resource.png" alt="">
+    <h1>Rich Resources</h1>
+    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+   </div>
+   </div>
+   </section>
+
+   <section class="feature">
+    <div class="feature-container">
+      <div>
+      <h1>Featured Episodes</h1>
+      </div>
+      <div>
+        <h1>The Future of Al in Everyday Life</h1>
+        <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+        <span>
+          <img src="../assets/clock.png" alt="">
+          <h4>42 main</h4>
+        </span>
+      </div>
+      <div>
+        <h1>Building Better Habits for Remote Work</h1>
+        <p>Practical Strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+        <span>
+          <img src="../assets/clock.png" alt="">
+          <h4>35 main</h4>
+        </span>
+      </div>
+      <div>
+        <h1>Career Growth in Tech: A Roadmap</h1>
+        <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+        <span>
+          <img src="../assets/clock.png" alt="">
+          <h4>51 main</h4>
+        </span>
+      </div>
+
+      <div>
+        <h1>Meet The Host</h1>
+      </div>
+    </div>
+
+   </section>
+
+
+
+
 </body>
 </html>
