--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <p>EPISODES PUBLISHED</p>
     </div>
     <div class="box-1">
-      <h1>4.9</h1>
+      <h1>4.9★</h1>
       <p>AVERAGE RATING</p>
     </div>
     <div class="box-1">
@@ -85,76 +85,120 @@
    </div>
    </section>
    <section class="Choose">
-    <div class="choose-container">
+   
    <div>
     <h1>Why Choose TechWave</h1>
    </div>
+    <div class="choose-container">
    <div class="box-2">
-    <img class="icon" src="../assets/headphone.png" alt="">
+    <img class="icon" src="../assets/headphone.png" alt="img">
     <h1>Premium Audio Quality</h1>
     <p>Experience crystal-clear sound with professional recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
    </div>
+
    <div class="box-2">
-    <img class="icon" src="../assets/device.png" alt="">
+    <img class="icon" src="../assets/device.png" alt="img">
     <h1>Mobile Friendly</h1>
     <p>Listen on the go with seamless mobile experience and offline downloads.</p>
    </div>
+ 
    <div class="box-2">
-    <img class="icon" src="../assets/location.png" alt="">
+    <img class="icon" src="../assets/location.png" alt="img">
     <h1>Global Community</h1>
     <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
    </div>
    <div class="box-2">
-    <img class="icon" src="../assets/zap-fast.png" alt="">
+    <img class="icon" src="../assets/zap-fast.png" alt="img">
     <h1>Exclusive Interviews</h1>
     <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
    </div>
    <div class="box-2">
-    <img class="icon" src="assets/resource.png" alt="">
+    <img class="icon" src="assets/resource.png" alt="img">
     <h1>Rich Resources</h1>
     <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
    </div>
    </div>
    </section>
 
-   <section class="feature">
+   <section>
+  <div class="feature">
     <div class="feature-container">
-      <div>
       <h1>Featured Episodes</h1>
       </div>
-      <div>
+     
+      <div class="container">
+ 
+      <div class="card">
+         <div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PJb_ZMbeGug?si=FvVbAELXpRRec_X2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>
+  </div>
         <h1>The Future of Al in Everyday Life</h1>
         <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
-        <span>
-          <img src="../assets/clock.png" alt="">
-          <h4>42 main</h4>
-        </span>
+        <div class="icon-text">
+         <img src="../assets/clock.png" alt="img">
+          <span>42 main</span>
+        </div>
       </div>
-      <div>
+      
+      <div class="card">
+           <div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PJb_ZMbeGug?si=FvVbAELXpRRec_X2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>
+  </div>
         <h1>Building Better Habits for Remote Work</h1>
         <p>Practical Strategies for staying productive and maintaining work-life balance in a remote environment.</p>
-        <span>
-          <img src="../assets/clock.png" alt="">
-          <h4>35 main</h4>
-        </span>
+        <div>
+          <img src="../assets/clock.png" alt="img">
+          <span>35 main</span>
+        </div>
       </div>
-      <div>
+      <div class="card">
+           <div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/PJb_ZMbeGug?si=FvVbAELXpRRec_X2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" allowfullscreen></iframe>
+  </div>
         <h1>Career Growth in Tech: A Roadmap</h1>
         <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
-        <span>
-          <img src="../assets/clock.png" alt="">
-          <h4>51 main</h4>
-        </span>
+        <div>
+          <img src="../assets/clock.png" alt="img">
+          <span>51 main</span>
+        </div>
       </div>
-
+     </div>
       <div>
         <h1>Meet The Host</h1>
       </div>
-    </div>
+      </div>
+  </section>
 
-   </section>
+<footer>
+  
+  <div class="footer-container">
+<div class="footer-img">
+  <img class="footer-logo" src="assets/TechWave.png" alt="">
 
 
+<div class="footer-icons">
+  <img src="assets/spotify.png" alt="">
+  <span>Spotify</span>
+
+<div> 
+  <img src="assets/apple-podcast.png" alt="">
+  <span class="tes">Apple podcasts</span>
+</div>
+<div>
+  <img src="assets/youtube.png" alt="">
+  <span class="tes">YouTube</span>
+</div>
+<div>
+  <img src="assets/twitter.png" alt="">
+  <span class="tes">Twitter</span>
+</div>
+</div>
+</div>
+</div>
+<div class="footer-text">
+  <p>©2026 TechWave Podcast. All rights reserved.</p>
+</div>
+</footer>
 
 
 </body>
