--- a/index.html
+++ b/index.html
@@ -98,32 +98,32 @@
     </div>
     <div class="choose-container">
       <div class="box-2 row-2">
-        <img class="im" src="../assets/headphone.png" alt="img">
+        <img class="im" src="./assets/headphone.png" alt="img">
         <h3 class="H1">Premium Audio Quality</h3>
         <p class="P1">Experience crystal-clear sound with professional recording equipment and expert audio engineering. Every
           episode is mastered for optimal listening across all devices and platforms.</p>
       </div>
 
       <div class="box-2 col-2">
-        <img src="../assets/device.png" alt="img">
+        <img src="./assets/device.png" alt="img">
         <h3 class="H2">Mobile Friendly</h3>
         <p class="P2">Listen on the go with seamless mobile experience and offline downloads.</p>
       </div>
 
       <div class="box-2 col-2">
-        <img src="../assets/location.png" alt="img">
+        <img src="./assets/location.png" alt="img">
         <h3 class="H2">Global Community</h3>
         <p class="P2">Connect with tech enthusiasts from over 120 countries worldwide.</p>
       </div>
       <div class="box-2 col-12">
-        <img src="../assets/zap-fast.png" alt="img">
+        <img src="./assets/zap-fast.png" alt="img">
         <h3 class="H2">Exclusive Interviews</h3>
         <p class="P3">Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures
           exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success
           strategies.</p>
       </div>
       <div class="box-2">
-        <img src="assets/resource.png" alt="img">
+        <img src="./assets/resource.png" alt="img">
         <h3 class="H1">Rich Resources</h3>
         <p class="P4">Access show notes, transcripts, and additional learning materials for every episode.</p>
       </div>
