--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next
           decade.</p>
            <div class="card-icon">
-          <img src="../assets/clock.png" alt="img">
+          <img src="./assets/clock.png" alt="img">
           <span class="color">42 main</span>
         </div>
       </div>
@@ -171,7 +171,7 @@
           <h3>Building Better Habits for Remote Work</h3>
         <p>Practical Strategies for staying productive and maintaining work-life balance in a remote environment.</p>
         <div class="card-icon">
-          <img src="../assets/clock.png" alt="img">
+          <img src="./assets/clock.png" alt="img">
           <span class="color">35 main</span>
         </div>
         </div>
@@ -190,7 +190,7 @@
          <h3>Career Growth in Tech: A Roadmap</h3>
         <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
         <div class="card-icon">
-          <img src="../assets/clock.png" alt="img">
+          <img src="./assets/clock.png" alt="img">
           <span class="color">51 main</span>
         </div>
      </div>
